[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/overlay/PauseOverlay.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/Extrude.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[node name="PauseOverlay" type="CanvasLayer"]
pause_mode = 1
follow_viewport_enable = true
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.392157, 0.392157, 0.392157, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MarginOverlay" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Root" type="VBoxContainer" parent="MarginOverlay"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="CenteredContents" type="CenterContainer" parent="MarginOverlay/Root"]
margin_right = 1024.0
margin_bottom = 529.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="Label" parent="MarginOverlay/Root/CenteredContents"]
margin_left = 428.0
margin_top = 240.0
margin_right = 596.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 2 )
text = "paused"

[node name="MarginContents" type="MarginContainer" parent="MarginOverlay/Root"]
margin_top = 533.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 32
custom_constants/margin_top = 16
custom_constants/margin_left = 32
custom_constants/margin_bottom = 16

[node name="Contents" type="HBoxContainer" parent="MarginOverlay/Root/MarginContents"]
margin_left = 32.0
margin_top = 16.0
margin_right = 992.0
margin_bottom = 51.0
custom_constants/separation = 20

[node name="ResumeOption" type="Label" parent="MarginOverlay/Root/MarginContents/Contents"]
margin_right = 72.0
margin_bottom = 35.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Resume"

[node name="DisconnectOption" type="Label" parent="MarginOverlay/Root/MarginContents/Contents"]
margin_left = 92.0
margin_right = 212.0
margin_bottom = 35.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Disconnect"

[node name="SettingsOption" type="Label" parent="MarginOverlay/Root/MarginContents/Contents"]
margin_left = 232.0
margin_right = 328.0
margin_bottom = 35.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="QuitOption" type="Label" parent="MarginOverlay/Root/MarginContents/Contents"]
margin_left = 348.0
margin_right = 396.0
margin_bottom = 35.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[connection signal="gui_input" from="MarginOverlay/Root/MarginContents/Contents/ResumeOption" to="." method="_on_ResumeOption_gui_input"]
[connection signal="mouse_entered" from="MarginOverlay/Root/MarginContents/Contents/ResumeOption" to="." method="_on_ResumeOption_mouse_entered"]
[connection signal="mouse_exited" from="MarginOverlay/Root/MarginContents/Contents/ResumeOption" to="." method="_on_ResumeOption_mouse_exited"]
[connection signal="gui_input" from="MarginOverlay/Root/MarginContents/Contents/DisconnectOption" to="." method="_on_DisconnectOption_gui_input"]
[connection signal="mouse_entered" from="MarginOverlay/Root/MarginContents/Contents/DisconnectOption" to="." method="_on_DisconnectOption_mouse_entered"]
[connection signal="mouse_exited" from="MarginOverlay/Root/MarginContents/Contents/DisconnectOption" to="." method="_on_DisconnectOption_mouse_exited"]
[connection signal="gui_input" from="MarginOverlay/Root/MarginContents/Contents/SettingsOption" to="." method="_on_SettingsOption_gui_input"]
[connection signal="mouse_entered" from="MarginOverlay/Root/MarginContents/Contents/SettingsOption" to="." method="_on_SettingsOption_mouse_entered"]
[connection signal="mouse_exited" from="MarginOverlay/Root/MarginContents/Contents/SettingsOption" to="." method="_on_SettingsOption_mouse_exited"]
[connection signal="gui_input" from="MarginOverlay/Root/MarginContents/Contents/QuitOption" to="." method="_on_QuitOption_gui_input"]
[connection signal="mouse_entered" from="MarginOverlay/Root/MarginContents/Contents/QuitOption" to="." method="_on_QuitOption_mouse_entered"]
[connection signal="mouse_exited" from="MarginOverlay/Root/MarginContents/Contents/QuitOption" to="." method="_on_QuitOption_mouse_exited"]
